--- a/prebuilt/root/init.shooter.rc
+++ b/prebuilt/root/init.shooter.rc
@@ -1,5 +1,9 @@
 import init.shooter.usb.rc
 
+on early-init
+    #set SELINUX to passive
+    setenforce 0
+
 on init
     mkdir /mnt/media_rw/sdcard0 0700 media_rw media_rw
     mkdir /storage 0555 root root
@@ -58,6 +62,10 @@ on boot
     mkdir /data/misc/wifi/sockets 0770 wifi wifi
     mkdir /data/misc/wifi/wpa_supplicant 0770 wifi wifi
     mkdir /data/misc/dhcp 0770 dhcp dhcp
+
+    # create symlink to qcn wpa_supplicant folder
+    symlink /data/misc/wifi/wpa_supplicant /data/system/wpa_supplicant
+    symlink /dev/socket/wpa_wlan0 /data/system/wpa_supplicant/wlan0
 
     #wimax
     mkdir /data/misc/wimax 0770 wimax wimax
@@ -135,6 +143,8 @@ on boot
     chown system /sys/devices/platform/rs300000a7.65536/force_sync
     chown system /sys/devices/platform/rs300000a7.65536/sync_sts
 
+    write /sys/module/subsystem_restart/parameters/restart_level 3
+
 # Force loading of modem and Q6 images
 service load-modem /system/bin/load-modem.sh
     oneshot
@@ -201,6 +211,11 @@ on property:ro.hdmi.enable=true
 service htcbatt /system/bin/htcbatt
     class main
     user root
+
+## TEMP FIX FOR BATTERY TEMP ISSUE THANKS FLEMMARD
+service adc_fixup /system/bin/cat /sys/devices/platform/msm_adc/batt_id
+    class main
+    oneshot
 
 service mpdecision /system/bin/mpdecision --no_sleep --avg_comp
     class main
